--- a/dummy_hand_project/requirements.txt
+++ b/dummy_hand_project/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-streamlit-webrtc
-opencv-python
-mediapipe
-av
-numpy
+streamlit==1.33.0
+opencv-python==4.9.0.80
+mediapipe==0.10.9
+numpy==1.24.3
+pillow==10.2.0
+watchdog
